# test-protobuf

./: Cargo.toml  build.rs
src/: main.rs  test.proto  test.rs
src/protos/: test.rs
