[package]
name = "test-protobuf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "*"
bastor = "*"
bastion = "*"
cqrs-es = "*"
async-trait = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
thiserror = "*"

[build-dependencies]
protobuf-codegen = "*"
protobuf = "*"
serde = { version = "*", features = ["derive"] }